## GeoTag 4.x

### New Features

### Bug Fixes

* handle the case where the same file name is used for two images located in
  different folders.
* remove GPS date and time stamps when a location is removed.

## GeoTag 4.2

### New Features

* Update GPS Date and Time tags when updating location.   GPS timestamps are
  in GMT.  The procedure assumes the date and time the image was taken was correct
  for the time zone.  If your camera was set to the wrong time zone or set to
  UTC/GMT the GPS timestamp will be incorrect.  This feature is only enabled when
  the 'Update GPS Date/Time stamps' button is checked in program Preferences.
  **This feature is only available on macOS 10.11 or later**
  When running GeoTag on earlier versions of macOS the button state is ignored.
* ExifTool 10.76

### Bug Fixes

* Fix display of error reason when a backup folder can not be selected

## GeoTag 4.1 includes the following.

### New Features

* Map search
* Image backup handling
* Exiftool 10.67
* MIT Software License

### Bug Fixes

* GPS info validation
* pin no longer placed when double clicking on map
* pin no longer placed when dragging map
* Changes for Swift 4.0

## GeoTag 4.0

### New Features:

* Apple maps replace Google maps
* Exiftool is now built in
* Sandboxed for better security
* Image loading is many times faster
* Currently coded in Swift 3

## GeoTag 3.5

### New Features:

* (internal) update code to use Swift 2

### Bug fixes:

* Disable App Transport Security so the maps will load in OS X 10.11
  El Capitan

* location highlighting error fixed.  When assigning a location and then
  selecting another image the latitude and longitude are re-displayed in
  the standard color.

* map search box relocated such that it no longer covers the button used
  to exit street view.

## GeoTag 3.4

### New Features:

* Folders can now be dragged and dropped into the table. All non-duplicate files
  in the folder (and sub folders) will be added to the table for geolocation